--- a/src/mainWindow.html
+++ b/src/mainWindow.html
@@ -5,7 +5,20 @@
         <link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.min.css">
     </head>
     <body>
-
         <h1>Shinobi Shopping List</h1>
+        <ul></ul>
+
+        <script>
+            const electron = require('electron');
+            const {ipcRenderer} = electron;
+            const ul = document.querySelector('ul');
+
+            ipcRenderer.on('item:add', function(e, item) {
+                const li = document.createElement('li');
+                const itemText = document.createTextNode(item);
+                li.appendChild(itemText);
+                ul.appendChild(li);
+            });
+        </script>
     </body>
 </html>
